--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                   <li onclick="moblienavbar()" id="bar"><a href="#"><i class="fa fa-bars" style="font-size:36px"></i></a></li>
                   <li id="active"><a href="./index.html">Home</a></li>
                   <li><a href="#aboutus">About</a></li>
-                  <li><a href="#">Contact</a></li>
+                  <li><a href="#contactus">Contact</a></li>
                   <li><a href="#">Help</a></li>
                   <li><a href="#">Login</a></li>
                   <li><a href="#">Signup</a></li>
