--- a/index.html
+++ b/index.html
@@ -756,7 +756,7 @@
                      <li>Contant US</li>
                      <li>Product FAQs</li>
                      <li>OnePluse</li>
-                     <li>Redmi</li>
+                     <li>Redmi NEW</li>
                      <li>Realme</li>                     
                  </ul>
             </div>
