login and signup page added

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
                   <li><a href="#aboutus">About</a></li>
                   <li><a href="#contactus">Contact</a></li>
                   <li><a href="#">Help</a></li>
-                  <li><a href="#">Login</a></li>
-                  <li><a href="#">Signup</a></li>
+                  <li><a href="./login.html">Login</a></li>
+                  <li><a href="./signup.html">Signup</a></li>
                   <li id="search"><input type="text" placeholder="Search..."> <i class="fa fa-thumbs-up" style="font-size:30px"></i></li>                 
         </ul>
         <ul  style="display: none" id="moblienav1" class="moblienav">
@@ -675,7 +675,7 @@
                 
         </div>
         <div class="imgtag">
-            <img src="./images/aboutus.webp">
+            
             <ul>
                 <li> Used by over 25 million users every month</li>
                 <li> Over 500 million page views per month</li>
