--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <title>Document</title>
 </head>
 <body>
-    <!--``````````` navbar `````````````` -->
+    <!--````````````` navbar ```````````````` -->
         <ul class="navcontainer">
                   <li><i class="fa fa-mobile-phone" style="font-size:50px;color: white;"></i></li>
                   <li onclick="moblienavbar()" id="bar"><a href="#"><i class="fa fa-bars" style="font-size:36px"></i></a></li>
