--- a/signup.html
+++ b/signup.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <title>
-            Login
+            signup
         </title>
         <link rel="stylesheet" href="./css/login.css">
     </head>
