--- a/login.html
+++ b/login.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <title>
-            Login
+            Login page
         </title>
         <link rel="stylesheet" href="./css/login.css">
     </head>
