responsiveness using mediaquery

--- a/login.html
+++ b/login.html
@@ -1,5 +1,8 @@
 <html>
     <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>
             Login page
         </title>
@@ -7,13 +10,15 @@
     </head>
     <body >
         <h1>Users Login Page</h1>
-        <div >
-             <label>Your Email : </label><br>
-             <input id="email"  type="text" name="email_name" placeholder="enter your email"><br>
-             <label>Password : </label><br>
-             <input id="password" type="text" name="password" placeholder="password"><br>
-             <br>
-             <button>Login</button><br><br><a href="./signup.html">new?create new account</a>
+        <div class="container">
+             <div action="" class="form">
+                <label>Your Email : </label><br>
+                <input id="email"  type="text" name="email_name" placeholder="enter your email"><br>
+                <label>Password : </label><br>
+                <input id="password" type="text" name="password" placeholder="password"><br>
+                <br>
+                <button>Login</button><br><br><a href="./signup.html">new?create new account</a>
+             </div>
         </div>
        
     </body>
