--- a/index.html
+++ b/index.html
@@ -28,18 +28,11 @@
         <i onclick="moblienavbar()"  class="material-icons" style="font-size:40px; color: white;cursor: pointer;">cancel</i><hr>
         <a onclick="moblienavbar()" href="./index.html"><li id="active"> Home</li></a>
         <a onclick="moblienavbar()" href="#aboutus"><li>About</li></a>
-        <a onclick="moblienavbar()" href="#"><li>Moblie & Tablets</li></a>
-        <a onclick="moblienavbar()" href="#"><li>Compare</li></a>
-        <a onclick="moblienavbar()" href="#"><li>Top 10</li></a>
-        <a onclick="moblienavbar()" href="#"><li>Upcoming Moblies</li></a>
-        <a onclick="moblienavbar()" href="#"><li>Laptops</li></a>
-        <a onclick="moblienavbar()" href="#"><li>News & Reviews</li></a>
-        <a onclick="moblienavbar()" href="#"><li>Best</li></a>
-        <a href="#"><li>About</li></a>
-        <a href="#"><li>Contact</li></a>
-        <a href="#"><li>Help</li></a>
-        <a href="#"><li>Login</li></a>
-        <a href="#"><li>Signup</li></a>      
+        <a onclick="moblienavbar()" href="#contactus"><li>Contact</li></a>
+        <a onclick="moblienavbar()" href="./login.html"><li>Login</li></a>
+        <a onclick="moblienavbar()" href="./signup.html"><li>Signup</li></a>
+        <a onclick="moblienavbar()" href="#"><li>Help</li></a>        
+           
         </ul>
         <ul class="navcontainer1"> 
                 <a href="#"></a><li>Moblie & Tablets🡻
@@ -122,6 +115,7 @@
 
     <!--``````````` home ```````````````` -->
     <div class="homecontainer">
+        <br>
         <h1 class="header">Good afternoon sir Welcome to brand store</h1>
           <div class="headofcontent">
               <div class="filter">
@@ -751,7 +745,7 @@
                  </ul>
             </div>
       </div>
-      <p style="color: white;border-top: 2px solid rgb(75, 71, 71);padding: 20px;">CopyRight © 2021<br> Developed By SOURABH PATEL<br>All Right Reserved.</p>
+      <p style="color: white;border-top: 2px solid rgb(75, 71, 71);padding: 20px;">CopyRight © 2022<br> Developed By SOURABH PATEL<br>All Right Reserved.</p>
    </div>
    <!--````````````````````````````` -->
    
