--- a/signup.html
+++ b/signup.html
@@ -1,5 +1,8 @@
 <html>
     <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>
             signup
         </title>
@@ -7,17 +10,19 @@
     </head>
     <body >
         <h1>Users Signup Page</h1>
-        <div >
-             <label>Your Name : </label><br>
-             <input id="name"  type="text" name="name" placeholder="enter your name"><br>
-             <label>Email : </label><br>
-             <input id="email" type="email" name="email" placeholder="enter your email"><br>
-             <label>password : </label><br>
-             <input id="password"  type="password" name="password" placeholder="enter your password"><br>
-             <label>Confirm Password : </label><br>
-             <input id="password" type="password" name="password" placeholder="password"><br>
-             <br>
-             <button>signup</button><br><br><a href="./login.html">have a account?logint</a>
+        <div class="container" >
+            <div class="form" id="singup">
+                <label>Your Name : </label><br>
+                <input id="name"  type="text" name="name" placeholder="enter your name"><br>
+                <label>Email : </label><br>
+                <input id="email" type="email" name="email" placeholder="enter your email"><br>
+                <label>password : </label><br>
+                <input id="password"  type="password" name="password" placeholder="enter your password"><br>
+                <label>Confirm Password : </label><br>
+                <input id="password" type="password" name="password" placeholder="password"><br>
+                <br>
+                <button>signup</button><br><br><a href="./login.html">have a account?logint</a>
+            </div>
         </div>
        
     </body>
