--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                   <li><a href="#contactus">Contact</a></li>
                   <li><a href="./login.html">Login</a></li>
                   <li><a href="./signup.html">Signup</a></li>
-                  <li><a href="#">Help</a></li>
+                  <li><a href="./help.html">Help</a></li>
                   <li id="search"><input type="text" placeholder="Search..."> <i class="fa fa-thumbs-up" style="font-size:30px"></i></li>                 
         </ul>
         <ul  style="display: none" id="moblienav1" class="moblienav">
@@ -37,63 +37,61 @@
         <ul class="navcontainer1"> 
                 <a href="#"></a><li>Moblie & Tablets🡻
                     <ul>
-                        <a href="#"><li>Home</li></a>
-                        <a href="#"><li>About</li></a>
-                        <a href="#"><li>Contact</li></a>
-                        <a href="#"><li>Help</li></a>
-                        <a href="#"><li>Login</li></a>
-                        <a href="#"><li>Signup</li></a> 
+                        <a href="#"><li>Samsung</li></a>
+                        <a href="#"><li>Vivo</li></a>
+                        <a href="#"><li>Oppo</li></a>
+                        <a href="#"><li>Mi</li></a>
+                        <a href="#"><li>Iphone</li></a>
+                        <a href="#"><li>Nokia</li></a> 
                     </ul>
                 </li></a>
                 <a href="#"><li>Compare 🡻
                     <ul>
-                        <a href="#"><li>Home</li></a>
-                        <a href="#"><li>About</li></a>
-                        <a href="#"><li>Contact</li></a>
-                        <a href="#"><li>Help</li></a>
-                        <a href="#"><li>Login</li></a>
-                        <a href="#"><li>Signup</li></a> 
+                        <a href="#"><li>RAM</li></a>
+                        <a href="#"><li>Internal</li></a>
+                        <a href="#"><li>Camera</li></a>
+                        <a href="#"><li>Price</li></a>
+                        <a href="#"><li>Screen</li></a>
+                        <a href="#"><li>Bettery</li></a> 
                     </ul>
                 </li></a>
                 <a href="#"> <li>Top 10🡻
                     <ul>
-                        <a href="#"><li>Home</li></a>
-                        <a href="#"><li>About</li></a>
-                        <a href="#"><li>Contact</li></a>
-                        <a href="#"><li>Help</li></a>
-                        <a href="#"><li>Login</li></a>
-                        <a href="#"><li>Signup</li></a> 
+                        <a href="#"><li>Samsung</li></a>
+                        <a href="#"><li>Vivo</li></a>
+                        <a href="#"><li>Oppo</li></a>
+                        <a href="#"><li>Mi</li></a>
+                        <a href="#"><li>Iphone</li></a>
+                        <a href="#"><li>Nokia</li></a>  
                     </ul>
                     </li></a>
                 <li><a href="#">Upcoming</a></li>
                 <a href="#"><li>Best🡻
                     <ul>
-                        <a href="#"><li>Home</li></a>
-                        <a href="#"><li>About</li></a>
-                        <a href="#"><li>Contact</li></a>
-                        <a href="#"><li>Help</li></a>
-                        <a href="#"><li>Login</li></a>
-                        <a href="#"><li>Signup</li></a> 
+                        <a href="#"><li>Iphone 12</li></a>
+                        <a href="#"><li>Samsung A50</li></a>
+                        <a href="#"><li>Vivo Y50</li></a>
+                        <a href="#"><li>Oppo Z1</li></a>
+                        <a href="#"><li>Nokia n2</li></a>
+                        <a href="#"><li>Iphone 13</li></a> 
                     </ul>
                 </li></a>
                 <a href="#"><li>News & Reviews🡻
                     <ul>
-                        <a href="#"><li>Home</li></a>
-                        <a href="#"><li>About</li></a>
-                        <a href="#"><li>Contact</li></a>
-                        <a href="#"><li>Help</li></a>
-                        <a href="#"><li>Login</li></a>
-                        <a href="#"><li>Signup</li></a> 
+                        <a href="#"><li>Samsung</li></a>
+                        <a href="#"><li>Vivo</li></a>
+                        <a href="#"><li>Oppo</li></a>
+                        <a href="#"><li>Mi</li></a>
+                        <a href="#"><li>Iphone</li></a>
+                        <a href="#"><li>Nokia</li></a>  
                     </ul>
                </li></a>
                <a href="#"> <li>Laptops🡻
                 <ul>
-                    <a href="#"><li>Home</li></a>
-                    <a href="#"><li>About</li></a>
-                    <a href="#"><li>Contact</li></a>
-                    <a href="#"><li>Help</li></a>
-                    <a href="#"><li>Login</li></a>
-                    <a href="#"><li>Signup</li></a> 
+                    <a href="#"><li>HP</li></a>
+                    <a href="#"><li>Dell</li></a>
+                    <a href="#"><li>Linovo</li></a>
+                    <a href="#"><li>Mac</li></a>
                 </ul>
                 </li></a>
                 <li><a href="#">More</a></li>
