--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <a onclick="moblienavbar()" href="#contactus"><li>Contact</li></a>
         <a onclick="moblienavbar()" href="./login.html"><li>Login</li></a>
         <a onclick="moblienavbar()" href="./signup.html"><li>Signup</li></a>
-        <a onclick="moblienavbar()" href="#"><li>Help</li></a>        
+        <a onclick="moblienavbar()" href="./help.html"><li>Help</li></a>        
            
         </ul>
         <ul class="navcontainer1"> 
