--- a/help.html
+++ b/help.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Mr. Camel</title>
+  <title>Mr. sourabh</title>
   <link rel="stylesheet" href="./css/help.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
   <style>
@@ -22,18 +22,7 @@
         <a href="#"><i class="fab fa-instagram"></i></a>
         <a href="#"><i class="fab fa-twitter"></i></a>
       </div>
-    </header>
-    <aside class="left">
-      <img src="./assets/html/mr-camel.jpg" width="160px" />
-      <ul>
-        <li><a class="active" href="#home">Home</a></li>
-        <li><a href="#career">Career</a></li>
-        <li><a href="#contact">Contact</a></li>
-        <li><a href="#about">About</a></li>
-      </ul>
-      <br><br>
-      <p>"Do something important in life. I created moblie store using html css ans js."<br>- SOURABH PATEL</p>
-    </aside>
+    </header>    
     <main class="content">
       <h2>About Me</h2>
       <p>Brand Store
@@ -47,24 +36,7 @@
         people decide which phone to buy and where to buy it from.</p>
       <hr><br>
       <h2>How Can I Help You?</h2>
-      <table>
-        <tr>
-          <th>SKILL 1</th>
-          <th>SKILL 2</th>
-          <th>SKILL 3</th>
-        </tr>
-        <tr>
-          <td><i class="fas fa-broom"></i></td>
-          <td><i class="fas fa-archive"></i></td>
-          <td><i class="fas fa-trailer"></i></td>
-        </tr>
-        <tr>
-          <td>Cleaning Moblies</td>
-          <td>Storage</td>
-          <td>Good Transportation</td>
-        </tr>
-        <tr>
-      </table>
+      
       <form>
         <label>Email- : <input type="text" name="email"></label><br>
         <label> Mobile: <input type="text" name="mobile"> </label><br><br>
